# iPhoneMirror

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: windows-build.yml
docs/: ARCHITECTURE.md  D3D11_RENDERING.md  DECODER_GUI_ANALYSIS.md  DEVICE_CORNER_PROFILES.md  OBS_OUTPUT.md  PROTOCOL.md  ROADMAP.md  USER_GUIDE.md  WASAPI_AUDIO.md
docs/releases/: v0.3.0-preview.1.md  v0.6.0-preview.1.md  v1.0.0.md  v1.0.3.md  v1.1.0-preview.1.md
scripts/: aspect_ratio_smoke.ps1  build_airplay_receiver.ps1  build_icon.py  diagnose.py  gui_smoke.ps1  localization_gui_smoke.ps1  media_cast_integrated_smoke.ps1  multi_device_capture_switch_smoke.ps1  multi_device_selection_smoke.ps1  package_release.ps1  reset_driver_test_environment.ps1  ui_visual_smoke.ps1  verify_localization.ps1  window_chrome_smoke.ps1  window_close_cleanup_smoke.ps1  wireless_receiver_smoke.ps1
src/App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  iPhoneMirror.App.csproj
src/App.Logic.Tests/: IPhoneMirror.App.Logic.Tests.csproj  Program.cs
src/App/Controls/: NativePreviewHost.cs  PreviewAttachmentCoordinator.cs
src/App/Drivers/: THIRD-PARTY-NOTICES.txt
src/App/Interop/: NativeCore.cs
src/App/Localization/: LocalizationService.cs  Strings.en-US.xaml  Strings.zh-CN.xaml
src/App/Models/: DeviceCaptureState.cs  DeviceCornerProfile.cs  DeviceViewModel.cs
src/App/Services/: AppleProductNames.cs  AspectRatioWindowController.cs  CaptureSessionOwnership.cs  CaptureShutdownCoordinator.cs  DeviceCornerProfileResolver.cs  DeviceSessionManager.cs  DriverHelperMode.cs  DriverManagerLauncher.cs  DriverReplugTracker.cs  IPhoneFilterDriverService.cs  IndependentWindowAudioPolicy.cs  MediaCastReceiverController.cs  MultiDevicePreviewManager.cs  NativeLogTailReader.cs  PreviewWindowManager.cs  ScreenshotService.cs  SecondaryMirrorMode.cs  SecondaryMirrorProcessManager.cs  StableDeviceSelection.cs  WirelessReceiverController.cs  WirelessReceiverService.cs
src/App/ViewModels/: MainViewModel.cs  RelayCommand.cs
src/App/Windows/: AdvancedSettingsWindow.xaml  AdvancedSettingsWindow.xaml.cs  AppPromptWindow.xaml  AppPromptWindow.xaml.cs  DriverHelpWindow.xaml  DriverHelpWindow.xaml.cs  NativePreviewWindow.cs  PreviewWindow.xaml  PreviewWindow.xaml.cs  SecondaryMirrorWindow.cs  UsbProjectionModeInfoWindow.xaml  UsbProjectionModeInfoWindow.xaml.cs
src/Core/: CMakeLists.txt
src/Core/include/iPhoneMirror/: CoreApi.h
src/Core/resources/: iPhoneMirror.Core.rc
src/Core/src/: CoreApi.cpp  Logging.cpp  Logging.h
src/Core/src/Audio/: WasapiRenderer.cpp  WasapiRenderer.h
src/Core/src/Capture/: CaptureSession.cpp  CaptureSession.h  ICaptureSession.h  WirelessCaptureSession.cpp  WirelessCaptureSession.h  WirelessReceiverHub.cpp  WirelessReceiverHub.h
src/Core/src/Device/: AppleUsbDiscovery.cpp  AppleUsbDiscovery.h  DeviceManager.cpp  DeviceManager.h
src/Core/src/Media/: CoreMedia.cpp  CoreMedia.h  H264.cpp  H264.h  MediaFoundationDecoder.cpp  MediaFoundationDecoder.h
src/Core/src/Protocol/: Plist.cpp  Plist.h  QuickTimePacket.cpp  QuickTimePacket.h  QuickTimeSession.cpp  QuickTimeSession.h
src/Core/src/Renderer/: D3D11PreviewRenderer.cpp  D3D11PreviewRenderer.h
src/Core/src/Transport/: LibUsb0Readiness.h  LibUsb0Transport.cpp  LibUsb0Transport.h  QtUsbTransport.cpp  QtUsbTransport.h  Socket.cpp  Socket.h  UsbMuxClient.cpp  UsbMuxClient.h
src/Core/tests/: CoreTests.cpp
src/Core/tests/fixtures/: README.md
src/Core/tools/: LibUsb0Probe.cpp
src/DriverInstaller/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  iPhoneMirror.DriverInstaller.csproj
src/DriverInstaller.Tests/: Program.cs  iPhoneMirror.DriverInstaller.Tests.csproj
src/DriverInstaller/Localization/: Strings.en-US.xaml  Strings.zh-CN.xaml
src/DriverInstaller/Models/: DriverModels.cs
src/DriverInstaller/Properties/: AssemblyInfo.cs
src/DriverInstaller/Services/: AppleDeviceMetadataReader.cs  AppleProductNames.cs  AppleSupportInstaller.cs  DeviceCatalog.cs  DriverConstants.cs  DriverLocalization.cs  DriverLogger.cs  DriverOperationClient.cs  DriverPayload.cs  ElevatedDriverHost.cs
src/DriverInstaller/Windows/: FailureHelpWindow.xaml  FailureHelpWindow.xaml.cs  PromptWindow.xaml  PromptWindow.xaml.cs  RequiredActionWindow.xaml  RequiredActionWindow.xaml.cs
src/WirelessHost/: CMakeLists.txt  DlnaRenderer.cpp  DlnaRenderer.h  DnsSdShim.cpp  DnsSdShim.def  IpcProtocol.h  WirelessHost.cpp
src/WirelessHost/tests/: WirelessHostSmoke.cpp  WirelessHostStub.cpp  WirelessHostStub.def
